VPP3-225 fixed up the alignment on the cell with number 10

--- a/src/styles/components/attendance-cell.scss
+++ b/src/styles/components/attendance-cell.scss
@@ -1,6 +1,10 @@
 .attendanceCell {
   margin: 12px 0;
 
+  &--left {
+    margin-left: -18px;
+  }
+
   &__spot-name {
     font-size: 36px;
     color: $color-light-black;
