--- a/src/styles/components/attendance-column.scss
+++ b/src/styles/components/attendance-column.scss
@@ -2,5 +2,5 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin-right: 20%;
+  margin-right: 15%;
 }
